--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -55,7 +55,7 @@
         <div class="flex-end flex" style="height: 17rem; color: #00C6CF;">
             <form action="https://google.com/search">
                 <div class="border-input">
-                    <input type="text" id="url" placeholder="Search Google" name="q" class="field">
+                    <input type="text" id="url" placeholder="Search Google" name="q" class="field" autocomplete="off">
                 </div>
             </form>
         </div>
